       driver were not deleted
    *) The new method CHI::Cascade::Value->state (no docs yet)
    +) Added method CHI::Cascade::Value::state_as_str (no docs yet)
    *) The test '07_fast_mmap.t' tests now deferring & states of values
    *) Fix few bug with target locking
    *) Fixed unproductive code piece of value with expiring

0.25001
    *) Few fix - should improve tests

0.25
    +) Some improvements
    *) For backward compatibility with perl < 5.9 the operator '$a // $b' is
       changed to long style as 'defined($a) ? $a : $b'. It should improve a
       tests on old perl installations

0.24_01
    +) Added 'parent' module in requires for old perl installation (<=5.10.0)

0.24 (stable)
    *) Fixed bug with tests with memcached

0.23
    +) Queues for non blocking running - to see test t/lib/test_04.pm
       (no docs yet)
    +) Added test '07_fast_mmap.t' for queue-ing
    *) Fix some bugs
    +) Added bits for values (no docs yet) and not finished yet.

0.22
    +) Added the option 'target_chi' - target markers can be kept in other CHI
       cache than data of targets. It's useful for l1_cache's caches of CHI

0.21
    *) A detection of circle dependencies is improved (not tested)

0.20
    +) Some optimization
    *) Few fixes of documentation
    +) Added option 'depends_catch' to rule as catcher callback for dependencies

0.19
    *) Fixed bug of die like "Can't call method "is_value" on an undefined value
       at /usr/local/share/perl5/CHI/Cascade.pm line 190"

0.18
    +) Now if recompute function dies with exception of CHI::Cascade::Value type
       (introduced in v.0.13) CHI::Cascade::run method will return old value of
       target value from cache if exception's value is 'undef' and cache value
       exists. Before the run method always returned a value of exception.
    +) Imroved the documentation for CHI::Cascade::rule/code
    +) Added the documentation of CHI::Cascade::Value

0.17 (stable)