@@ -51,5 +51,5 @@
          "url" : "git://github.com/Perlover/CHI-Cascade.git"
       }
    },
-   "version" : "0.251"
+   "version" : "0.2511"
 }
